some update add test framework
