# resources/swagger-docs/tags.php
@@ -1,0 +1,32 @@
+<?php
+
+/**
+ * @SWG\Tag(
+ *   name="pet",
+ *   description="Everything about your Pets",
+ *   @SWG\ExternalDocumentation(
+ *     description="Find out more",
+ *     url="http://swagger.io"
+ *   )
+ * )
+ * @SWG\Tag(
+ *   name="pets",
+ *   description="Everything about your Pets",
+ *   @SWG\ExternalDocumentation(
+ *     description="Find out more",
+ *     url="http://swagger.io"
+ *   )
+ * )
+ * @SWG\Tag(
+ *   name="store",
+ *   description="Access to Petstore orders"
+ * )
+ * @SWG\Tag(
+ *   name="user",
+ *   description="Operations about user",
+ *   @SWG\ExternalDocumentation(
+ *     description="Find out more about our store",
+ *     url="http://swagger.io"
+ *   )
+ * )
+ */
